# aiffel-research

./: .gitignore
data-handling/: final_modudak.csv  pandas2.ipynb  pandas3.ipynb
mlops/pipeline/: Dockerfile.mysql  docker-compose.yaml  sentimentanalysis.sql
mlops/pipeline/app/: Dockerfile.fastapi  pyproject.toml
mlops/pipeline/app/src/: main.py  settings.py
mlops/pipeline/app/src/front/: Dockerfile.streamlit  streamlit.py
mlops/pipeline/app/src/model/: model.py  naver_vocab.json  router.py  schemas.py
nlp/: nlp.ipynb
node/basic/: batch_normalization.ipynb  dropout.ipynb  evaluation_metric.ipynb  preprocessing.ipynb  regularization.ipynb  scikit-learn.ipynb  unsupervised-clustering.ipynb  unsupervised-dimreduction.ipynb  visualization.ipynb  viz_categorical.ipynb  viz_continuous.ipynb  viz_timeseries.ipynb
project/git/: markdown.md
quest/main-quest/: gpt_model.ipynb
quest/playground/: README.md  playground_1.ipynb
scikit-learn/: machine-learning.ipynb  preprocessing.ipynb
starter/data-handling/: pandas1.ipynb
starter/dl/: best_mnist_model.keras  callbacks.ipynb  ck_mnist_model.keras  fashion_mnist.ipynb  mnist.ipynb  mnist_model.h5  mnist_model.keras  tensor.ipynb  tensorflow.ipynb
starter/mini_project/: breast_cancer.ipynb  digits.ipynb  iris.ipynb  wine.ipynb
starter/nlp/: sentiment-analysis.ipynb
starter/scikit-learn/: dataset.ipynb
starter/supervised-learning/: hyperparameter-tuning.ipynb  kfold.ipynb  linear-regression.ipynb  (+1 more)
supervised-learning/: decision-tree.ipynb
unsupervised-learning/: pca.ipynb
vision/: cnn.ipynb
(+135 files in other folders)
