[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["zave7 <if.zave@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^3.0.0"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
torch = "^2.3.1"
uvicorn = "^0.30.3"
pydantic-settings = "^2.4.0"
kiwipiepy = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
